<resources>
    <string name="app_name">consumiendoAPI</string>

    <string name="Consultar">Consultar</string>

    <string name="titestudiante">Registro de Estudiantes</string>

    <string name="ident">Identificacion</string>

    <string name="nombre">Nombres y Apellidos</string>

    <string name="curso">Curso</string>

    <string name="nota1">Nota Uno</string>

    <string name="nota2">Nota Dos</string>

    <string name="nota3">Nota Tres</string>

    <string name="guardar">Crear</string>

    <string name="modificar">Modificar</string>

    <string name="borracampos">Limpiar Campos</string>

    <string name="eliminar">Eliminar</string>
</resources>
